--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-cssimport": "^7.0.0",
     "gulp-uglify": "^3.0.2",
+    "mm-jsr": "^3.0.2",
     "nouislider": "^15.6.0"
   }
 }
